[gd_scene load_steps=7 format=2]

[ext_resource path="res://Props/MetalFurniture.material" type="Material" id=1]
[ext_resource path="res://Props/Table Top.material" type="Material" id=2]
[ext_resource path="res://Props/Object.gd" type="Script" id=3]
[ext_resource path="res://SFX/coneImpact.ogg" type="AudioStream" id=4]

[sub_resource type="ArrayMesh" id=1]
resource_name = "CafeTable -rigid"
surfaces/0 = {
"aabb": AABB( -0.404984, -0.841567, -0.469037, 0.809968, 0.834514, 0.938075 ),
"array_data": PoolByteArray( 168, 9, 65, 190, 20, 40, 248, 188, 121, 254, 112, 190, 105, 22, 190, 0, 212, 187, 160, 127, 0, 60, 0, 0, 12, 90, 207, 62, 130, 89, 80, 191, 209, 80, 227, 62, 105, 22, 190, 0, 212, 187, 160, 127, 0, 58, 0, 56, 68, 183, 199, 62, 129, 76, 86, 191, 132, 248, 210, 62, 105, 22, 190, 0, 212, 187, 160, 127, 0, 60, 0, 56, 22, 196, 49, 190, 103, 32, 231, 187, 220, 77, 80, 190, 105, 22, 190, 0, 212, 187, 160, 127, 0, 58, 0, 0, 12, 90, 207, 62, 130, 89, 80, 191, 209, 80, 227, 62, 40, 91, 77, 0, 105, 12, 187, 127, 0, 58, 0, 56, 250, 111, 88, 190, 90, 173, 60, 188, 53, 164, 54, 190, 40, 91, 77, 0, 105, 12, 187, 127, 0, 56, 0, 0, 26, 4, 188, 62, 246, 125, 81, 191, 166, 37, 240, 62, 40, 91, 77, 0, 105, 12, 187, 127, 0, 56, 0, 56, 22, 196, 49, 190, 103, 32, 231, 187, 220, 77, 80, 190, 40, 91, 77, 0, 105, 12, 187, 127, 0, 58, 0, 0, 250, 111, 88, 190, 90, 173, 60, 188, 53, 164, 54, 190, 208, 104, 203, 0, 111, 58, 14, 127, 255, 51, 235, 59, 168, 9, 65, 190, 20, 40, 248, 188, 121, 254, 112, 190, 208, 104, 203, 0, 111, 58, 14, 127, 0, 52, 20, 56, 142, 181, 103, 190, 84, 91, 14, 189, 210, 84, 87, 190, 208, 104, 203, 0, 111, 58, 14, 127, 30, 33, 0, 58, 22, 196, 49, 190, 103, 32, 231, 187, 220, 77, 80, 190, 208, 104, 203, 0, 111, 58, 14, 127, 215, 55, 0, 58, 26, 4, 188, 62, 246, 125, 81, 191, 166, 37, 240, 62, 151, 234, 66, 0, 44, 69, 96, 127, 0, 56, 0, 56, 142, 181, 103, 190, 84, 91, 14, 189, 210, 84, 87, 190, 151, 234, 66, 0, 44, 69, 96, 127, 0, 52, 0, 0, 81, 97, 180, 62, 247, 112, 87, 191, 88, 205, 223, 62, 151, 234, 66, 0, 44, 69, 96, 127, 0, 52, 0, 56, 250, 111, 88, 190, 90, 173, 60, 188, 53, 164, 54, 190, 151, 234, 66, 0, 44, 69, 96, 127, 0, 56, 0, 0, 142, 181, 103, 190, 84, 91, 14, 189, 210, 84, 87, 190, 216, 165, 179, 0, 151, 244, 69, 127, 0, 52, 0, 0, 68, 183, 199, 62, 129, 76, 86, 191, 132, 248, 210, 62, 216, 165, 179, 0, 151, 244, 69, 127, 0, 0, 0, 56, 81, 97, 180, 62, 247, 112, 87, 191, 88, 205, 223, 62, 216, 165, 179, 0, 151, 244, 69, 127, 0, 52, 0, 56, 168, 9, 65, 190, 20, 40, 248, 188, 121, 254, 112, 190, 216, 165, 179, 0, 151, 244, 69, 127, 0, 0, 0, 0, 68, 183, 199, 62, 129, 76, 86, 191, 132, 248, 210, 62, 48, 152, 53, 0, 111, 58, 14, 129, 0, 58, 20, 56, 26, 4, 188, 62, 246, 125, 81, 191, 166, 37, 240, 62, 48, 152, 53, 0, 111, 58, 14, 129, 0, 58, 235, 59, 81, 97, 180, 62, 247, 112, 87, 191, 88, 205, 223, 62, 48, 152, 53, 0, 111, 58, 14, 129, 20, 56, 0, 58, 12, 90, 207, 62, 130, 89, 80, 191, 209, 80, 227, 62, 48, 152, 53, 0, 111, 58, 14, 129, 235, 59, 0, 58, 10, 90, 207, 190, 128, 89, 80, 191, 210, 80, 227, 62, 151, 22, 190, 0, 44, 187, 160, 129, 0, 58, 0, 56, 170, 9, 65, 62, 20, 40, 248, 188, 118, 254, 112, 190, 151, 22, 190, 0, 44, 187, 160, 129, 0, 60, 0, 0, 65, 183, 199, 190, 129, 76, 86, 191, 133, 248, 210, 62, 151, 22, 190, 0, 44, 187, 160, 129, 0, 60, 0, 56, 24, 196, 49, 62, 26, 32, 231, 187, 220, 77, 80, 190, 151, 22, 190, 0, 44, 187, 160, 129, 0, 58, 0, 0, 250, 111, 88, 62, 128, 173, 60, 188, 53, 164, 54, 190, 216, 91, 77, 0, 151, 12, 187, 129, 0, 56, 0, 0, 10, 90, 207, 190, 128, 89, 80, 191, 210, 80, 227, 62, 216, 91, 77, 0, 151, 12, 187, 129, 0, 58, 0, 56, 26, 4, 188, 190, 246, 125, 81, 191, 167, 37, 240, 62, 216, 91, 77, 0, 151, 12, 187, 129, 0, 56, 0, 56, 24, 196, 49, 62, 26, 32, 231, 187, 220, 77, 80, 190, 216, 91, 77, 0, 151, 12, 187, 129, 0, 58, 0, 0, 170, 9, 65, 62, 20, 40, 248, 188, 118, 254, 112, 190, 48, 104, 203, 0, 145, 58, 14, 129, 0, 52, 20, 56, 250, 111, 88, 62, 128, 173, 60, 188, 53, 164, 54, 190, 48, 104, 203, 0, 145, 58, 14, 129, 255, 51, 235, 59, 142, 181, 103, 62, 74, 91, 14, 189, 208, 84, 87, 190, 48, 104, 203, 0, 145, 58, 14, 129, 30, 33, 0, 58, 24, 196, 49, 62, 26, 32, 231, 187, 220, 77, 80, 190, 48, 104, 203, 0, 145, 58, 14, 129, 215, 55, 0, 58, 142, 181, 103, 62, 74, 91, 14, 189, 208, 84, 87, 190, 105, 234, 66, 0, 212, 69, 96, 129, 0, 52, 0, 0, 26, 4, 188, 190, 246, 125, 81, 191, 167, 37, 240, 62, 105, 234, 66, 0, 212, 69, 96, 129, 0, 56, 0, 56, 80, 97, 180, 190, 245, 112, 87, 191, 88, 205, 223, 62, 105, 234, 66, 0, 212, 69, 96, 129, 0, 52, 0, 56, 250, 111, 88, 62, 128, 173, 60, 188, 53, 164, 54, 190, 105, 234, 66, 0, 212, 69, 96, 129, 0, 56, 0, 0, 65, 183, 199, 190, 129, 76, 86, 191, 133, 248, 210, 62, 40, 165, 179, 0, 105, 244, 69, 129, 0, 0, 0, 56, 142, 181, 103, 62, 74, 91, 14, 189, 208, 84, 87, 190, 40, 165, 179, 0, 105, 244, 69, 129, 0, 52, 0, 0, 80, 97, 180, 190, 245, 112, 87, 191, 88, 205, 223, 62, 40, 165, 179, 0, 105, 244, 69, 129, 0, 52, 0, 56, 170, 9, 65, 62, 20, 40, 248, 188, 118, 254, 112, 190, 40, 165, 179, 0, 105, 244, 69, 129, 0, 0, 0, 0, 26, 4, 188, 190, 246, 125, 81, 191, 167, 37, 240, 62, 208, 152, 53, 0, 145, 58, 14, 127, 0, 58, 235, 59, 65, 183, 199, 190, 129, 76, 86, 191, 133, 248, 210, 62, 208, 152, 53, 0, 145, 58, 14, 127, 0, 58, 20, 56, 80, 97, 180, 190, 245, 112, 87, 191, 88, 205, 223, 62, 208, 152, 53, 0, 145, 58, 14, 127, 20, 56, 0, 58, 10, 90, 207, 190, 128, 89, 80, 191, 210, 80, 227, 62, 208, 152, 53, 0, 145, 58, 14, 127, 235, 59, 0, 58, 14, 90, 207, 62, 129, 89, 80, 191, 208, 80, 227, 190, 105, 22, 66, 0, 212, 187, 96, 129, 0, 58, 0, 56, 167, 9, 65, 190, 20, 40, 248, 188, 116, 254, 112, 62, 105, 22, 66, 0, 212, 187, 96, 129, 0, 60, 0, 0, 68, 183, 199, 62, 129, 76, 86, 191, 132, 248, 210, 190, 105, 22, 66, 0, 212, 187, 96, 129, 0, 60, 0, 56, 20, 196, 49, 190, 180, 32, 231, 187, 219, 77, 80, 62, 105, 22, 66, 0, 212, 187, 96, 129, 0, 58, 0, 0, 249, 111, 88, 190, 90, 173, 60, 188, 53, 164, 54, 62, 40, 91, 179, 0, 105, 12, 69, 129, 0, 56, 0, 0, 14, 90, 207, 62, 129, 89, 80, 191, 208, 80, 227, 190, 40, 91, 179, 0, 105, 12, 69, 129, 0, 58, 0, 56, 27, 4, 188, 62, 246, 125, 81, 191, 162, 37, 240, 190, 40, 91, 179, 0, 105, 12, 69, 129, 0, 56, 0, 56, 20, 196, 49, 190, 180, 32, 231, 187, 219, 77, 80, 62, 40, 91, 179, 0, 105, 12, 69, 129, 0, 58, 0, 0, 167, 9, 65, 190, 20, 40, 248, 188, 116, 254, 112, 62, 208, 104, 53, 0, 111, 58, 242, 129, 0, 52, 20, 56, 249, 111, 88, 190, 90, 173, 60, 188, 53, 164, 54, 62, 208, 104, 53, 0, 111, 58, 242, 129, 255, 51, 235, 59, 138, 181, 103, 190, 84, 91, 14, 189, 208, 84, 87, 62, 208, 104, 53, 0, 111, 58, 242, 129, 30, 33, 0, 58, 20, 196, 49, 190, 180, 32, 231, 187, 219, 77, 80, 62, 208, 104, 53, 0, 111, 58, 242, 129, 215, 55, 0, 58, 138, 181, 103, 190, 84, 91, 14, 189, 208, 84, 87, 62, 151, 234, 190, 0, 44, 69, 160, 129, 0, 52, 0, 0, 27, 4, 188, 62, 246, 125, 81, 191, 162, 37, 240, 190, 151, 234, 190, 0, 44, 69, 160, 129, 0, 56, 0, 56, 82, 97, 180, 62, 245, 112, 87, 191, 85, 205, 223, 190, 151, 234, 190, 0, 44, 69, 160, 129, 0, 52, 0, 56, 249, 111, 88, 190, 90, 173, 60, 188, 53, 164, 54, 62, 151, 234, 190, 0, 44, 69, 160, 129, 0, 56, 0, 0, 68, 183, 199, 62, 129, 76, 86, 191, 132, 248, 210, 190, 216, 165, 77, 0, 151, 244, 187, 129, 0, 0, 0, 56, 138, 181, 103, 190, 84, 91, 14, 189, 208, 84, 87, 62, 216, 165, 77, 0, 151, 244, 187, 129, 0, 52, 0, 0, 82, 97, 180, 62, 245, 112, 87, 191, 85, 205, 223, 190, 216, 165, 77, 0, 151, 244, 187, 129, 0, 52, 0, 56, 167, 9, 65, 190, 20, 40, 248, 188, 116, 254, 112, 62, 216, 165, 77, 0, 151, 244, 187, 129, 0, 0, 0, 0, 27, 4, 188, 62, 246, 125, 81, 191, 162, 37, 240, 190, 48, 152, 203, 0, 111, 58, 242, 127, 0, 58, 235, 59, 68, 183, 199, 62, 129, 76, 86, 191, 132, 248, 210, 190, 48, 152, 203, 0, 111, 58, 242, 127, 0, 58, 20, 56, 82, 97, 180, 62, 245, 112, 87, 191, 85, 205, 223, 190, 48, 152, 203, 0, 111, 58, 242, 127, 20, 56, 0, 58, 14, 90, 207, 62, 129, 89, 80, 191, 208, 80, 227, 190, 48, 152, 203, 0, 111, 58, 242, 127, 235, 59, 0, 58, 173, 9, 65, 62, 20, 40, 248, 188, 116, 254, 112, 62, 151, 22, 66, 0, 44, 187, 96, 127, 0, 60, 0, 0, 12, 90, 207, 190, 128, 89, 80, 191, 208, 80, 227, 190, 151, 22, 66, 0, 44, 187, 96, 127, 0, 58, 0, 56, 65, 183, 199, 190, 128, 76, 86, 191, 133, 248, 210, 190, 151, 22, 66, 0, 44, 187, 96, 127, 0, 60, 0, 56, 26, 196, 49, 62, 103, 32, 231, 187, 220, 77, 80, 62, 151, 22, 66, 0, 44, 187, 96, 127, 0, 58, 0, 0, 12, 90, 207, 190, 128, 89, 80, 191, 208, 80, 227, 190, 216, 91, 179, 0, 151, 12, 69, 127, 0, 58, 0, 56, 254, 111, 88, 62, 90, 173, 60, 188, 54, 164, 54, 62, 216, 91, 179, 0, 151, 12, 69, 127, 0, 56, 0, 0, 26, 4, 188, 190, 246, 125, 81, 191, 166, 37, 240, 190, 216, 91, 179, 0, 151, 12, 69, 127, 0, 56, 0, 56, 26, 196, 49, 62, 103, 32, 231, 187, 220, 77, 80, 62, 216, 91, 179, 0, 151, 12, 69, 127, 0, 58, 0, 0, 254, 111, 88, 62, 90, 173, 60, 188, 54, 164, 54, 62, 48, 104, 53, 0, 145, 58, 242, 127, 255, 51, 235, 59, 173, 9, 65, 62, 20, 40, 248, 188, 116, 254, 112, 62, 48, 104, 53, 0, 145, 58, 242, 127, 0, 52, 20, 56, 143, 181, 103, 62, 74, 91, 14, 189, 205, 84, 87, 62, 48, 104, 53, 0, 145, 58, 242, 127, 30, 33, 0, 58, 26, 196, 49, 62, 103, 32, 231, 187, 220, 77, 80, 62, 48, 104, 53, 0, 145, 58, 242, 127, 215, 55, 0, 58, 26, 4, 188, 190, 246, 125, 81, 191, 166, 37, 240, 190, 105, 234, 190, 0, 212, 69, 160, 127, 0, 56, 0, 56, 143, 181, 103, 62, 74, 91, 14, 189, 205, 84, 87, 62, 105, 234, 190, 0, 212, 69, 160, 127, 0, 52, 0, 0, 78, 97, 180, 190, 244, 112, 87, 191, 86, 205, 223, 190, 105, 234, 190, 0, 212, 69, 160, 127, 0, 52, 0, 56, 254, 111, 88, 62, 90, 173, 60, 188, 54, 164, 54, 62, 105, 234, 190, 0, 212, 69, 160, 127, 0, 56, 0, 0, 143, 181, 103, 62, 74, 91, 14, 189, 205, 84, 87, 62, 40, 165, 77, 0, 105, 244, 187, 127, 0, 52, 0, 0, 65, 183, 199, 190, 128, 76, 86, 191, 133, 248, 210, 190, 40, 165, 77, 0, 105, 244, 187, 127, 0, 0, 0, 56, 78, 97, 180, 190, 244, 112, 87, 191, 86, 205, 223, 190, 40, 165, 77, 0, 105, 244, 187, 127, 0, 52, 0, 56, 173, 9, 65, 62, 20, 40, 248, 188, 116, 254, 112, 62, 40, 165, 77, 0, 105, 244, 187, 127, 0, 0, 0, 0, 65, 183, 199, 190, 128, 76, 86, 191, 133, 248, 210, 190, 208, 152, 203, 0, 145, 58, 242, 129, 0, 58, 20, 56, 26, 4, 188, 190, 246, 125, 81, 191, 166, 37, 240, 190, 208, 152, 203, 0, 145, 58, 242, 129, 0, 58, 235, 59, 78, 97, 180, 190, 244, 112, 87, 191, 86, 205, 223, 190, 208, 152, 203, 0, 145, 58, 242, 129, 20, 56, 0, 58, 12, 90, 207, 190, 128, 89, 80, 191, 208, 80, 227, 190, 208, 152, 203, 0, 145, 58, 242, 129, 235, 59, 0, 58 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0, 4, 0, 6, 0, 5, 0, 7, 0, 4, 0, 5, 0, 8, 0, 10, 0, 9, 0, 8, 0, 9, 0, 11, 0, 12, 0, 14, 0, 13, 0, 15, 0, 12, 0, 13, 0, 16, 0, 18, 0, 17, 0, 16, 0, 17, 0, 19, 0, 20, 0, 22, 0, 21, 0, 23, 0, 20, 0, 21, 0, 24, 0, 26, 0, 25, 0, 27, 0, 24, 0, 25, 0, 28, 0, 30, 0, 29, 0, 28, 0, 29, 0, 31, 0, 32, 0, 34, 0, 33, 0, 35, 0, 32, 0, 33, 0, 36, 0, 38, 0, 37, 0, 36, 0, 37, 0, 39, 0, 40, 0, 42, 0, 41, 0, 43, 0, 40, 0, 41, 0, 44, 0, 46, 0, 45, 0, 44, 0, 45, 0, 47, 0, 48, 0, 50, 0, 49, 0, 51, 0, 48, 0, 49, 0, 52, 0, 54, 0, 53, 0, 52, 0, 53, 0, 55, 0, 56, 0, 58, 0, 57, 0, 59, 0, 56, 0, 57, 0, 60, 0, 62, 0, 61, 0, 60, 0, 61, 0, 63, 0, 64, 0, 66, 0, 65, 0, 67, 0, 64, 0, 65, 0, 68, 0, 70, 0, 69, 0, 68, 0, 69, 0, 71, 0, 72, 0, 74, 0, 73, 0, 72, 0, 73, 0, 75, 0, 76, 0, 78, 0, 77, 0, 79, 0, 76, 0, 77, 0, 80, 0, 82, 0, 81, 0, 80, 0, 81, 0, 83, 0, 84, 0, 86, 0, 85, 0, 87, 0, 84, 0, 85, 0, 88, 0, 90, 0, 89, 0, 88, 0, 89, 0, 91, 0, 92, 0, 94, 0, 93, 0, 95, 0, 92, 0, 93, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 144,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 96
}
surfaces/1 = {
"aabb": AABB( -0.9, -0.03, -0.9, 1.8, 0.06001, 1.8 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 144, 194, 245, 60, 103, 102, 102, 191, 32, 0, 134, 0, 134, 0, 224, 127, 0, 60, 0, 0, 103, 102, 230, 62, 144, 194, 245, 188, 66, 136, 71, 191, 32, 0, 134, 0, 134, 0, 224, 127, 85, 59, 0, 56, 0, 0, 0, 0, 144, 194, 245, 188, 103, 102, 102, 191, 32, 0, 134, 0, 134, 0, 224, 127, 0, 60, 0, 56, 103, 102, 230, 62, 144, 194, 245, 60, 66, 136, 71, 191, 32, 0, 134, 0, 134, 0, 224, 127, 85, 59, 0, 0, 103, 102, 230, 62, 144, 194, 245, 60, 66, 136, 71, 191, 89, 0, 167, 0, 167, 0, 167, 127, 85, 59, 0, 0, 67, 136, 71, 63, 144, 194, 245, 188, 102, 102, 230, 190, 89, 0, 167, 0, 167, 0, 167, 127, 170, 58, 0, 56, 103, 102, 230, 62, 144, 194, 245, 188, 66, 136, 71, 191, 89, 0, 167, 0, 167, 0, 167, 127, 85, 59, 0, 56, 67, 136, 71, 63, 144, 194, 245, 60, 102, 102, 230, 190, 89, 0, 167, 0, 167, 0, 167, 127, 170, 58, 0, 0, 67, 136, 71, 63, 144, 194, 245, 60, 102, 102, 230, 190, 122, 0, 224, 0, 224, 0, 134, 127, 170, 58, 0, 0, 103, 102, 102, 63, 144, 194, 245, 188, 16, 247, 40, 51, 122, 0, 224, 0, 224, 0, 134, 127, 0, 58, 0, 56, 67, 136, 71, 63, 144, 194, 245, 188, 102, 102, 230, 190, 122, 0, 224, 0, 224, 0, 134, 127, 170, 58, 0, 56, 103, 102, 102, 63, 144, 194, 245, 60, 16, 247, 40, 51, 122, 0, 224, 0, 224, 0, 134, 127, 0, 58, 0, 0, 103, 102, 102, 63, 144, 194, 245, 60, 16, 247, 40, 51, 122, 0, 32, 0, 32, 0, 134, 127, 0, 58, 0, 0, 66, 136, 71, 63, 144, 194, 245, 188, 104, 102, 230, 62, 122, 0, 32, 0, 32, 0, 134, 127, 85, 57, 0, 56, 103, 102, 102, 63, 144, 194, 245, 188, 16, 247, 40, 51, 122, 0, 32, 0, 32, 0, 134, 127, 0, 58, 0, 56, 66, 136, 71, 63, 144, 194, 245, 60, 104, 102, 230, 62, 122, 0, 32, 0, 32, 0, 134, 127, 85, 57, 0, 0, 66, 136, 71, 63, 144, 194, 245, 60, 104, 102, 230, 62, 89, 0, 89, 0, 89, 0, 167, 127, 85, 57, 0, 0, 104, 102, 230, 62, 144, 194, 245, 188, 66, 136, 71, 63, 89, 0, 89, 0, 89, 0, 167, 127, 170, 56, 0, 56, 66, 136, 71, 63, 144, 194, 245, 188, 104, 102, 230, 62, 89, 0, 89, 0, 89, 0, 167, 127, 85, 57, 0, 56, 104, 102, 230, 62, 144, 194, 245, 60, 66, 136, 71, 63, 89, 0, 89, 0, 89, 0, 167, 127, 170, 56, 0, 0, 104, 102, 230, 62, 144, 194, 245, 60, 66, 136, 71, 63, 32, 0, 122, 0, 122, 0, 224, 127, 170, 56, 0, 0, 223, 234, 17, 52, 144, 194, 245, 188, 103, 102, 102, 63, 32, 0, 122, 0, 122, 0, 224, 127, 0, 56, 0, 56, 104, 102, 230, 62, 144, 194, 245, 188, 66, 136, 71, 63, 32, 0, 122, 0, 122, 0, 224, 127, 170, 56, 0, 56, 223, 234, 17, 52, 144, 194, 245, 60, 103, 102, 102, 63, 32, 0, 122, 0, 122, 0, 224, 127, 0, 56, 0, 0, 223, 234, 17, 52, 144, 194, 245, 60, 103, 102, 102, 63, 224, 0, 122, 0, 122, 0, 32, 127, 0, 56, 0, 0, 97, 102, 230, 190, 144, 194, 245, 188, 68, 136, 71, 63, 224, 0, 122, 0, 122, 0, 32, 127, 170, 54, 0, 56, 223, 234, 17, 52, 144, 194, 245, 188, 103, 102, 102, 63, 224, 0, 122, 0, 122, 0, 32, 127, 0, 56, 0, 56, 97, 102, 230, 190, 144, 194, 245, 60, 68, 136, 71, 63, 224, 0, 122, 0, 122, 0, 32, 127, 170, 54, 0, 0, 97, 102, 230, 190, 144, 194, 245, 60, 68, 136, 71, 63, 167, 0, 89, 0, 89, 0, 89, 127, 170, 54, 0, 0, 64, 136, 71, 191, 144, 194, 245, 188, 112, 102, 230, 62, 167, 0, 89, 0, 89, 0, 89, 127, 85, 53, 0, 56, 97, 102, 230, 190, 144, 194, 245, 188, 68, 136, 71, 63, 167, 0, 89, 0, 89, 0, 89, 127, 170, 54, 0, 56, 64, 136, 71, 191, 144, 194, 245, 60, 112, 102, 230, 62, 167, 0, 89, 0, 89, 0, 89, 127, 85, 53, 0, 0, 64, 136, 71, 191, 144, 194, 245, 60, 112, 102, 230, 62, 134, 0, 32, 0, 32, 0, 122, 127, 85, 53, 0, 0, 103, 102, 102, 191, 144, 194, 245, 188, 92, 163, 224, 52, 134, 0, 32, 0, 32, 0, 122, 127, 0, 52, 0, 56, 64, 136, 71, 191, 144, 194, 245, 188, 112, 102, 230, 62, 134, 0, 32, 0, 32, 0, 122, 127, 85, 53, 0, 56, 103, 102, 102, 191, 144, 194, 245, 60, 92, 163, 224, 52, 134, 0, 32, 0, 32, 0, 122, 127, 0, 52, 0, 0, 103, 102, 102, 191, 144, 194, 245, 60, 92, 163, 224, 52, 134, 0, 224, 0, 224, 0, 122, 127, 0, 52, 0, 0, 70, 136, 71, 191, 144, 194, 245, 188, 88, 102, 230, 190, 134, 0, 224, 0, 224, 0, 122, 127, 85, 49, 0, 56, 103, 102, 102, 191, 144, 194, 245, 188, 92, 163, 224, 52, 134, 0, 224, 0, 224, 0, 122, 127, 0, 52, 0, 56, 70, 136, 71, 191, 144, 194, 245, 60, 88, 102, 230, 190, 134, 0, 224, 0, 224, 0, 122, 127, 85, 49, 0, 0, 121, 102, 230, 190, 144, 194, 245, 60, 61, 136, 71, 191, 0, 126, 0, 0, 127, 0, 0, 127, 40, 48, 86, 56, 103, 102, 230, 62, 144, 194, 245, 60, 66, 136, 71, 191, 0, 126, 0, 0, 127, 0, 0, 127, 235, 53, 86, 56, 0, 0, 0, 0, 144, 194, 245, 60, 103, 102, 102, 191, 0, 126, 0, 0, 126, 0, 0, 127, 0, 52, 20, 56, 67, 136, 71, 63, 144, 194, 245, 60, 102, 102, 230, 190, 0, 126, 0, 0, 127, 0, 0, 127, 83, 55, 10, 57, 70, 136, 71, 191, 144, 194, 245, 60, 88, 102, 230, 190, 0, 126, 0, 0, 127, 0, 0, 127, 101, 41, 10, 57, 103, 102, 102, 63, 144, 194, 245, 60, 16, 247, 40, 51, 0, 126, 0, 0, 127, 0, 0, 127, 215, 55, 0, 58, 103, 102, 102, 191, 144, 194, 245, 60, 92, 163, 224, 52, 0, 126, 0, 0, 127, 0, 0, 127, 30, 33, 0, 58, 66, 136, 71, 63, 144, 194, 245, 60, 104, 102, 230, 62, 0, 126, 0, 0, 127, 0, 0, 127, 83, 55, 245, 58, 64, 136, 71, 191, 144, 194, 245, 60, 112, 102, 230, 62, 0, 126, 0, 0, 127, 0, 0, 127, 101, 41, 245, 58, 104, 102, 230, 62, 144, 194, 245, 60, 66, 136, 71, 63, 0, 126, 0, 0, 127, 0, 0, 127, 235, 53, 169, 59, 97, 102, 230, 190, 144, 194, 245, 60, 68, 136, 71, 63, 0, 126, 0, 0, 127, 0, 0, 127, 40, 48, 169, 59, 223, 234, 17, 52, 144, 194, 245, 60, 103, 102, 102, 63, 0, 126, 0, 0, 127, 0, 0, 127, 0, 52, 235, 59, 70, 136, 71, 191, 144, 194, 245, 60, 88, 102, 230, 190, 167, 0, 167, 0, 167, 0, 89, 127, 85, 49, 0, 0, 121, 102, 230, 190, 144, 194, 245, 188, 61, 136, 71, 191, 167, 0, 167, 0, 167, 0, 89, 127, 85, 45, 0, 56, 70, 136, 71, 191, 144, 194, 245, 188, 88, 102, 230, 190, 167, 0, 167, 0, 167, 0, 89, 127, 85, 49, 0, 56, 121, 102, 230, 190, 144, 194, 245, 60, 61, 136, 71, 191, 167, 0, 167, 0, 167, 0, 89, 127, 85, 45, 0, 0, 121, 102, 230, 190, 144, 194, 245, 60, 61, 136, 71, 191, 224, 0, 134, 0, 134, 0, 32, 127, 85, 45, 0, 0, 0, 0, 0, 0, 144, 194, 245, 188, 103, 102, 102, 191, 224, 0, 134, 0, 134, 0, 32, 127, 0, 0, 0, 56, 121, 102, 230, 190, 144, 194, 245, 188, 61, 136, 71, 191, 224, 0, 134, 0, 134, 0, 32, 127, 85, 45, 0, 56, 0, 0, 0, 0, 144, 194, 245, 60, 103, 102, 102, 191, 224, 0, 134, 0, 134, 0, 32, 127, 0, 0, 0, 0, 103, 102, 230, 62, 144, 194, 245, 188, 66, 136, 71, 191, 0, 129, 0, 0, 127, 0, 0, 129, 245, 58, 86, 56, 121, 102, 230, 190, 144, 194, 245, 188, 61, 136, 71, 191, 0, 129, 0, 0, 127, 0, 0, 129, 10, 57, 86, 56, 0, 0, 0, 0, 144, 194, 245, 188, 103, 102, 102, 191, 0, 129, 0, 0, 126, 0, 0, 129, 0, 58, 20, 56, 67, 136, 71, 63, 144, 194, 245, 188, 102, 102, 230, 190, 0, 129, 0, 0, 127, 0, 0, 129, 169, 59, 10, 57, 70, 136, 71, 191, 144, 194, 245, 188, 88, 102, 230, 190, 0, 129, 0, 0, 127, 0, 0, 129, 86, 56, 10, 57, 103, 102, 102, 63, 144, 194, 245, 188, 16, 247, 40, 51, 0, 129, 0, 0, 127, 0, 0, 129, 235, 59, 0, 58, 103, 102, 102, 191, 144, 194, 245, 188, 92, 163, 224, 52, 0, 129, 0, 0, 127, 0, 0, 129, 20, 56, 0, 58, 66, 136, 71, 63, 144, 194, 245, 188, 104, 102, 230, 62, 0, 129, 0, 0, 127, 0, 0, 129, 169, 59, 245, 58, 64, 136, 71, 191, 144, 194, 245, 188, 112, 102, 230, 62, 0, 129, 0, 0, 127, 0, 0, 129, 86, 56, 245, 58, 104, 102, 230, 62, 144, 194, 245, 188, 66, 136, 71, 63, 0, 129, 0, 0, 127, 0, 0, 129, 245, 58, 169, 59, 97, 102, 230, 190, 144, 194, 245, 188, 68, 136, 71, 63, 0, 129, 0, 0, 127, 0, 0, 129, 10, 57, 169, 59, 223, 234, 17, 52, 144, 194, 245, 188, 103, 102, 102, 63, 0, 129, 0, 0, 127, 0, 0, 129, 0, 58, 235, 59 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0, 4, 0, 6, 0, 5, 0, 4, 0, 5, 0, 7, 0, 8, 0, 10, 0, 9, 0, 8, 0, 9, 0, 11, 0, 12, 0, 14, 0, 13, 0, 12, 0, 13, 0, 15, 0, 16, 0, 18, 0, 17, 0, 16, 0, 17, 0, 19, 0, 20, 0, 22, 0, 21, 0, 20, 0, 21, 0, 23, 0, 24, 0, 26, 0, 25, 0, 24, 0, 25, 0, 27, 0, 28, 0, 30, 0, 29, 0, 28, 0, 29, 0, 31, 0, 32, 0, 34, 0, 33, 0, 32, 0, 33, 0, 35, 0, 36, 0, 38, 0, 37, 0, 36, 0, 37, 0, 39, 0, 40, 0, 42, 0, 41, 0, 40, 0, 41, 0, 43, 0, 44, 0, 40, 0, 43, 0, 44, 0, 43, 0, 45, 0, 46, 0, 44, 0, 45, 0, 46, 0, 45, 0, 47, 0, 48, 0, 46, 0, 47, 0, 48, 0, 47, 0, 49, 0, 50, 0, 48, 0, 49, 0, 50, 0, 49, 0, 51, 0, 52, 0, 54, 0, 53, 0, 52, 0, 53, 0, 55, 0, 56, 0, 58, 0, 57, 0, 56, 0, 57, 0, 59, 0, 60, 0, 62, 0, 61, 0, 63, 0, 60, 0, 61, 0, 63, 0, 61, 0, 64, 0, 65, 0, 63, 0, 64, 0, 65, 0, 64, 0, 66, 0, 67, 0, 65, 0, 66, 0, 67, 0, 66, 0, 68, 0, 69, 0, 67, 0, 68, 0, 69, 0, 68, 0, 70, 0, 71, 0, 69, 0, 70, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 132,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 72
}

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -0.188513, -0.0302925, -0.235346, 0.404984, -0.813866, 0.443976, 0.39007, -0.837105, 0.412052, -0.1736, -0.00705342, -0.203422, 0.404984, -0.813866, 0.443976, -0.211365, -0.0115159, -0.178361, 0.367219, -0.818328, 0.469037, -0.1736, -0.00705342, -0.203422, -0.211365, -0.0115159, -0.178361, -0.188513, -0.0302925, -0.235346, -0.226279, -0.0347551, -0.210285, -0.1736, -0.00705342, -0.203422, 0.367219, -0.818328, 0.469037, -0.226279, -0.0347551, -0.210285, 0.352305, -0.841567, 0.437114, -0.211365, -0.0115159, -0.178361, -0.226279, -0.0347551, -0.210285, 0.39007, -0.837105, 0.412052, 0.352305, -0.841567, 0.437114, -0.188513, -0.0302925, -0.235346, 0.39007, -0.837105, 0.412052, 0.367219, -0.818328, 0.469037, 0.352305, -0.841567, 0.437114, 0.404984, -0.813866, 0.443976, -0.404984, -0.813866, 0.443976, 0.188513, -0.0302925, -0.235346, -0.39007, -0.837105, 0.412052, 0.1736, -0.00705339, -0.203422, 0.211365, -0.011516, -0.178361, -0.404984, -0.813866, 0.443976, -0.367219, -0.818328, 0.469037, 0.1736, -0.00705339, -0.203422, 0.188513, -0.0302925, -0.235346, 0.211365, -0.011516, -0.178361, 0.226279, -0.034755, -0.210284, 0.1736, -0.00705339, -0.203422, 0.226279, -0.034755, -0.210284, -0.367219, -0.818328, 0.469037, -0.352305, -0.841567, 0.437114, 0.211365, -0.011516, -0.178361, -0.39007, -0.837105, 0.412052, 0.226279, -0.034755, -0.210284, -0.352305, -0.841567, 0.437114, 0.188513, -0.0302925, -0.235346, -0.367219, -0.818328, 0.469037, -0.39007, -0.837105, 0.412052, -0.352305, -0.841567, 0.437114, -0.404984, -0.813866, 0.443976, 0.404984, -0.813866, -0.443976, -0.188513, -0.0302925, 0.235346, 0.39007, -0.837105, -0.412052, -0.1736, -0.00705346, 0.203422, -0.211365, -0.0115159, 0.178361, 0.404984, -0.813866, -0.443976, 0.367219, -0.818328, -0.469037, -0.1736, -0.00705346, 0.203422, -0.188513, -0.0302925, 0.235346, -0.211365, -0.0115159, 0.178361, -0.226278, -0.0347551, 0.210284, -0.1736, -0.00705346, 0.203422, -0.226278, -0.0347551, 0.210284, 0.367219, -0.818328, -0.469037, 0.352305, -0.841567, -0.437113, -0.211365, -0.0115159, 0.178361, 0.39007, -0.837105, -0.412052, -0.226278, -0.0347551, 0.210284, 0.352305, -0.841567, -0.437113, -0.188513, -0.0302925, 0.235346, 0.367219, -0.818328, -0.469037, 0.39007, -0.837105, -0.412052, 0.352305, -0.841567, -0.437113, 0.404984, -0.813866, -0.443976, 0.188513, -0.0302925, 0.235346, -0.404984, -0.813866, -0.443976, -0.39007, -0.837105, -0.412052, 0.1736, -0.00705342, 0.203422, -0.404984, -0.813866, -0.443976, 0.211365, -0.0115159, 0.178361, -0.367219, -0.818328, -0.469037, 0.1736, -0.00705342, 0.203422, 0.211365, -0.0115159, 0.178361, 0.188513, -0.0302925, 0.235346, 0.226279, -0.034755, 0.210284, 0.1736, -0.00705342, 0.203422, -0.367219, -0.818328, -0.469037, 0.226279, -0.034755, 0.210284, -0.352305, -0.841567, -0.437113, 0.211365, -0.0115159, 0.178361, 0.226279, -0.034755, 0.210284, -0.39007, -0.837105, -0.412052, -0.352305, -0.841567, -0.437113, 0.188513, -0.0302925, 0.235346, -0.39007, -0.837105, -0.412052, -0.367219, -0.818328, -0.469037, -0.352305, -0.841567, -0.437113, -0.404984, -0.813866, -0.443976, 0, 0.03, -0.9, 0.45, -0.03, -0.779423, 0, -0.03, -0.9, 0.45, 0.03, -0.779423, 0.45, 0.03, -0.779423, 0.779423, -0.03, -0.45, 0.45, -0.03, -0.779423, 0.779423, 0.03, -0.45, 0.779423, 0.03, -0.45, 0.9, -0.03, 3.93403e-08, 0.779423, -0.03, -0.45, 0.9, 0.03, 3.93403e-08, 0.9, 0.03, 3.93403e-08, 0.779423, -0.03, 0.45, 0.9, -0.03, 3.93403e-08, 0.779423, 0.03, 0.45, 0.779423, 0.03, 0.45, 0.45, -0.03, 0.779423, 0.779423, -0.03, 0.45, 0.45, 0.03, 0.779423, 0.45, 0.03, 0.779423, 1.35896e-07, -0.03, 0.9, 0.45, -0.03, 0.779423, 1.35896e-07, 0.03, 0.9, 1.35896e-07, 0.03, 0.9, -0.45, -0.03, 0.779423, 1.35896e-07, -0.03, 0.9, -0.45, 0.03, 0.779423, -0.45, 0.03, 0.779423, -0.779423, -0.03, 0.45, -0.45, -0.03, 0.779423, -0.779423, 0.03, 0.45, -0.779423, 0.03, 0.45, -0.9, -0.03, 4.18421e-07, -0.779423, -0.03, 0.45, -0.9, 0.03, 4.18421e-07, -0.9, 0.03, 4.18421e-07, -0.779423, -0.03, -0.45, -0.9, -0.03, 4.18421e-07, -0.779423, 0.03, -0.45, -0.450001, 0.03, -0.779423, 0.45, 0.03, -0.779423, 0, 0.03, -0.9, 0.779423, 0.03, -0.45, -0.779423, 0.03, -0.45, 0.9, 0.03, 3.93403e-08, -0.9, 0.03, 4.18421e-07, 0.779423, 0.03, 0.45, -0.779423, 0.03, 0.45, 0.45, 0.03, 0.779423, -0.45, 0.03, 0.779423, 1.35896e-07, 0.03, 0.9, -0.779423, 0.03, -0.45, -0.450001, -0.03, -0.779423, -0.779423, -0.03, -0.45, -0.450001, 0.03, -0.779423, -0.450001, 0.03, -0.779423, 0, -0.03, -0.9, -0.450001, -0.03, -0.779423, 0, 0.03, -0.9, 0.45, -0.03, -0.779423, -0.450001, -0.03, -0.779423, 0, -0.03, -0.9, 0.779423, -0.03, -0.45, -0.779423, -0.03, -0.45, 0.9, -0.03, 3.93403e-08, -0.9, -0.03, 4.18421e-07, 0.779423, -0.03, 0.45, -0.779423, -0.03, 0.45, 0.45, -0.03, 0.779423, -0.45, -0.03, 0.779423, 1.35896e-07, -0.03, 0.9 )

[node name="CafeTable " type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.831209, 0 )
continuous_cd = true
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 3 )

[node name="mesh" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null
material/1 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
__meta__ = {
"_editor_description_": ""
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 5.0
max_db = 5.0
max_distance = 20.0
bus = "SoundEffects"
doppler_tracking = 2
__meta__ = {
"_editor_description_": ""
}
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
